go to 4.0-SNAPSHOT: breaking changes: Java 21, JAX-RS 4.0, RestEasy 7